tests/transpiler/x/cpp/group_by.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 11:14:25 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <map>
#include <numeric>
#include <sstream>
#include <iomanip>

struct PeopleItem {
    std::string name;
    int age;
    std::string city;
};

struct GGroup {
    std::string key;
    std::vector<PeopleItem> items;
    auto begin() { return items.begin(); }
    auto end() { return items.end(); }
    size_t size() const { return items.size(); }
};

struct StatsItem {
    std::string city;
    int count;
    double avg_age;
};

std::vector<PeopleItem> people = std::vector{PeopleItem{.name = std::string("Alice"), .age = 30, .city = std::string("Paris")}, PeopleItem{.name = std::string("Bob"), .age = 15, .city = std::string("Hanoi")}, PeopleItem{.name = std::string("Charlie"), .age = 65, .city = std::string("Paris")}, PeopleItem{.name = std::string("Diana"), .age = 45, .city = std::string("Hanoi")}, PeopleItem{.name = std::string("Eve"), .age = 70, .city = std::string("Paris")}, PeopleItem{.name = std::string("Frank"), .age = 22, .city = std::string("Hanoi")}};
std::vector<StatsItem> stats = ([]{ std::vector<StatsItem> __items;
std::map<std::string, std::vector<PeopleItem>> __groups;
for (auto person : people) {
        __groups[person.city].push_back(person);
}
for(auto &__kv : __groups) {
    GGroup g{__kv.first, __kv.second};
    __items.push_back(StatsItem{.city = g.key, .count = g.size(), .avg_age = ([&]{ auto tmp = ([]{ std::vector<auto> __items;
for (auto p : g) {
        __items.push_back(p.age);
}
return __items; }()); return tmp.empty() ? 0.0 : std::accumulate(tmp.begin(), tmp.end(), 0.0) / tmp.size(); }())});
}
return __items; }());

int main() {
    std::cout << std::string("--- People grouped by city ---") << std::endl;
    for (auto s : stats) {
        std::cout << s.city <<  " " << std::string(": count =") <<  " " << s.count <<  " " << std::string(", avg_age =") <<  " " << s.avg_age << std::endl;
    }
    return 0;
}
